# paper_transposonLibrary

./: .gitignore  LICENSE  README.md  pyproject.toml
data/imported/: display_names.csv  display_names.iTOL.txt  genomes.list  genomes_superset.csv  taxids.list
place_genome_on_tree/: download_genomes.ipynb  process_genomes.ipynb  prune_tree.ipynb  treeViz.py
place_genome_on_tree/gtdb_scripts/: gtdb_classify_wf.sh
