[tool.poetry]
name = "place_genome_on_tree"
version = "0.1.0"
description = "scripts used to build a tree for the transposon library paper"
authors = ["Sunit Jain"]
license = "MIT"
readme = "README.md"
packages = [{include = "place_genome_on_tree"}]

[tool.poetry.dependencies]
python = "^3.11"
ete3 = "^3.1.2"
six = "^1.16.0"
requests = "^2.28.2"
biopython = "^1.81"
numpy = "^1.24.2"
ipykernel = "^6.22.0"
cloudpathlib = {extras = ["s3"], version = "^0.13.0"}
comm = "^0.1.3"
boto3 = "^1.26.98"
pyqt5 = "^5.15.9"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
